--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "start": "node server.js",
     "build": "vite build",
     "preview": "vite preview"
   },
@@ -12,6 +13,7 @@
     "@tailwindcss/postcss": "^4.1.18",
     "@vueuse/core": "^14.2.0",
     "autoprefixer": "^10.4.24",
+    "express": "^5.2.1",
     "firebase": "^12.8.0",
     "pinia": "^3.0.4",
     "postcss": "^8.5.6",
